aggiunto lettura scrittura con DB, da terminare sistemazione lettura data rispetto fuso orario

--- a/public/style.css
+++ b/public/style.css
@@ -95,6 +95,7 @@
     
     padding-left: 10%;
     padding-right: 10%;
+    padding-bottom: 15px;
 
     display: flex;
     flex-direction: column;
