--- a/public/style.css
+++ b/public/style.css
@@ -120,6 +120,10 @@
     font-style: italic;
     cursor: pointer;
 }
+#tapToDownload{
+    font-style: italic;
+    cursor: pointer;
+}
 .content{
     height: 30vh;
 
